--- a/style.css
+++ b/style.css
@@ -59,3 +59,15 @@ body {
 .botoes {
     display: block;
 }
+.ativo{
+    background-color: var(--botao-ativo);
+    border: 4px solid var(--verde);
+}
+@media screen {
+    .botoes{
+        display: flex;
+    }
+    .botao:first-child{
+        border-radius: 40px 0 0 0;
+    }
+}
